test/sema/uknown_type_fn.yl
// RUN: compiler %s -res-dump 2>&1 | filecheck %s

// CHECK: [[# @LINE + 1 ]]:11: error: function 'foo' has invalid return type
fn foo(): userDefinedType {}

fn main(): void {}
